# 2024-camera

./: CMakeLists.txt  cvxFont.cpp  my_cpp_module.cpp
cpp/camera1/: CMakeLists.txt  my_cpp_module.cpp
cpp/camera2/: CMakeLists.txt  camera.cpp
python/camera1/: main.py
python/camera2/: main.py
